--- a/OutfitStudio.vcxproj
+++ b/OutfitStudio.vcxproj
@@ -808,6 +808,8 @@
     <ClInclude Include="src\program\PresetSaveDialog.h" />
     <ClInclude Include="src\program\ShapeProperties.h" />
     <ClInclude Include="src\program\SliderDataImportDialog.h" />
+    <ClInclude Include="src\render\GLCanvas.h" />
+    <ClInclude Include="src\render\GLDialog.h" />
     <ClInclude Include="src\render\GLExtensions.h" />
     <ClInclude Include="src\render\GLMaterial.h" />
     <ClInclude Include="src\render\GLOffscreenBuffer.h" />
@@ -881,6 +883,8 @@
     <ClCompile Include="src\program\PresetSaveDialog.cpp" />
     <ClCompile Include="src\program\ShapeProperties.cpp" />
     <ClCompile Include="src\program\SliderDataImportDialog.cpp" />
+    <ClCompile Include="src\render\GLCanvas.cpp" />
+    <ClCompile Include="src\render\GLDialog.cpp" />
     <ClCompile Include="src\render\GLExtensions.cpp" />
     <ClCompile Include="src\render\GLMaterial.cpp" />
     <ClCompile Include="src\render\GLOffscreenBuffer.cpp" />
