--- a/OutfitStudio.vcxproj.filters
+++ b/OutfitStudio.vcxproj.filters
@@ -1888,6 +1888,12 @@
     <ClInclude Include="lib\gli\glm\simd\neon.h">
       <Filter>Libraries\gli\glm\simd</Filter>
     </ClInclude>
+    <ClInclude Include="src\render\GLCanvas.h">
+      <Filter>Rendering</Filter>
+    </ClInclude>
+    <ClInclude Include="src\render\GLDialog.h">
+      <Filter>Rendering</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\TinyXML-2\tinyxml2.cpp">
@@ -2099,6 +2105,12 @@
     </ClCompile>
     <ClCompile Include="lib\SOIL2\wfETC.c">
       <Filter>Libraries\SOIL2</Filter>
+    </ClCompile>
+    <ClCompile Include="src\render\GLDialog.cpp">
+      <Filter>Rendering</Filter>
+    </ClCompile>
+    <ClCompile Include="src\render\GLCanvas.cpp">
+      <Filter>Rendering</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
