Add preview and more options to OBJ import
- Invert U/V, Scale, Rotate X/Y/Z.
- Show vertex and triangle counts, red text if too many.
- Allow deleting single shapes with DEL
- Green shape selection highlight in preview

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,7 @@ set(OSsources
 	src/ui/wxBrushSettingsPopup.cpp
 	src/program/EditUV.cpp
 	src/program/FBXImportDialog.cpp
+	src/program/ObjImportDialog.cpp
 	src/program/OutfitProject.cpp
 	src/program/OutfitStudio.cpp
 	src/program/ShapeProperties.cpp
