--- a/BodySlide.vcxproj.filters
+++ b/BodySlide.vcxproj.filters
@@ -1732,6 +1732,9 @@
     <ClInclude Include="lib\SOIL2\pkm_helper.h">
       <Filter>Libraries\SOIL2</Filter>
     </ClInclude>
+    <ClInclude Include="lib\LZ4F\lz4file.h">
+      <Filter>Libraries\LZ4F</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\TinyXML-2\tinyxml2.cpp">
@@ -1916,6 +1919,9 @@
     </ClCompile>
     <ClCompile Include="lib\SOIL2\image_helper.c">
       <Filter>Libraries\SOIL2</Filter>
+    </ClCompile>
+    <ClCompile Include="lib\LZ4F\lz4file.c">
+      <Filter>Libraries\LZ4F</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
